mealie/mealie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - protocol: TCP
      port: 9925
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: mealie
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "1000Mi"
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: mealie
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: mealie-pgdata
              mountPath: /var/lib/postgresql/mealie
              subPath: mealie
          readinessProbe:
            exec:
              command:
                - pg_isready
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 20
          failureThreshold: 3
      volumes:
        - name: mealie-pgdata
          persistentVolumeClaim:
            claimName: mealie-pgdata
